# WarpX

./: CMakeLists.txt  GNUmakefile
Source/: Make.WarpX
Source/FieldSolver/: WarpXPushFieldsEM.cpp
Source/FieldSolver/SpectralSolver/: SpectralFieldData.H  SpectralFieldData.cpp  SpectralSolver.H  SpectralSolver.cpp  WrapFFTW.cpp  warpx-backward_only_80.c  warpx-forward_only_80.c  warpx-forward_step_80.c
Source/FieldSolver/SpectralSolver/SpectralAlgorithms/: CMakeLists.txt  Make.package  PsatdAlgorithm.H  PsatdAlgorithm.cpp  SpectralBaseAlgorithm.H  psatd.fftx.codegen.hpp  psatd.fftx.source.cpp  warpx-fullstep_rho_80.c  warpx-symbol_norho_80.c  warpx-symbol_rho_80.c
Source/FieldSolver/SpectralSolver/SpectralAlgorithms/psatd.fftx/: CMakeLists.txt  defineArrays.hpp  fftx3.hpp  mynotes.txt  preamble.g  psatd.fftx.cpp  warpx-backward-only_80.g  warpx-backward-step_80.g  warpx-forward-only_80.g  warpx-forward-step_80.g  warpx-fullstep-norho_80.g  warpx-fullstep-rho_80.g  warpx-scale-backward_80.g  warpx-scale-forward_80.g  warpx-symbol_norho_80.g  warpx-symbol_rho_80.g
cmake/: WarpXFunctions.cmake
myexamples/: README.txt  inputs_3d_multi_rt_norho  inputs_3d_multi_rt_norho_20  inputs_3d_multi_rt_rho  inputs_3d_multi_rt_rho_20
teststep/: CMakeLists.txt  README.txt  cudaspiral.cu  runspiral.cpp  warpx80.cu
teststep/Utils/: WarpXConst.H
